--- a/assets/styles/scss/_inner.scss
+++ b/assets/styles/scss/_inner.scss
@@ -169,9 +169,14 @@
 
     .formFlex {
         display: flex;
-
+        @media only screen and (max-width: 640px){
+            display:block;
+        }
         label:last-child {
             margin-left: 10px !important;
+            @media only screen and (max-width: 640px){
+                margin-left: 0 !important;
+            }
         }
     }
 
